// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 gpIcVP"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ actions 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 gpIcVP"
>
  <div
    class="Cardstyles__Header-sc-2l30u5-0 xIVBi"
  >
    <div
      class="Cardstyles__Title-sc-2l30u5-1 cRWity"
    >
      <h5
        class="Headingstyles__Box-sc-1j4seq7-0 eRtSPB"
        color="brand-primary"
      >
        Card title
      </h5>
    </div>
    <div
      class="Cardstyles__Actions-sc-2l30u5-2"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M19.5 12v-.5l2.6-1.9-.1-.7c0-.1-.2-1-.9-2.2-.7-1.2-1.3-1.7-1.4-1.8l-.5-.4-3 1.3c-.3-.2-.6-.4-.9-.5L14.9 2l-.6-.2c-.1 0-1-.3-2.3-.3-1.3 0-2.2.3-2.3.3l-.6.2-.4 3.3c-.3.1-.6.3-.9.5l-3-1.3-.5.4c-.1.1-.7.7-1.4 1.9-.6 1.1-.9 2-.9 2.1l-.1.6 2.6 1.9v1l-2.6 1.9.1.8c0 .1.2 1 .9 2.2.7 1.1 1.3 1.8 1.4 1.8l.5.4 3-1.3c.3.2.6.4.9.5l.4 3.3.6.2c.1 0 1 .3 2.3.3 1.3 0 2.2-.3 2.3-.3l.6-.2.4-3.2c.3-.2.6-.3.9-.5l3 1.3.5-.4c.1-.1.8-.7 1.4-1.8.6-1.1.9-2 .9-2.2l.1-.6-2.6-1.9V12zm.3 3.3c-.1.3-.3.6-.5 1s-.4.7-.6.9L15.9 16l-.5.4c-.4.4-.9.6-1.5.8l-.6.2-.3 3.1c-.6.1-1.6.1-2.2 0l-.3-3.1-.5-.3c-.5-.2-1-.5-1.5-.8l-.5-.4-2.8 1.2c-.2-.2-.4-.5-.6-.9-.2-.4-.4-.7-.5-1l2.5-1.8-.1-.6c0-.3-.1-.6-.1-.8 0-.2 0-.6.1-.8l.1-.6-2.4-1.9c.1-.3.3-.6.5-1s.4-.7.6-.9L8.1 8l.5-.4c.4-.2.9-.5 1.4-.7l.6-.2.3-3.1c.6-.1 1.6-.1 2.2 0l.3 3.1.6.2c.5.2 1 .5 1.5.8l.5.4 2.8-1.2c.2.2.4.5.6.9.2.4.4.7.5 1l-2.5 1.8.1.6c0 .3.1.6.1.8 0 .2 0 .6-.1.8l-.1.6 2.4 1.9z"
        />
        <path
          d="M12 14a2 2 0 100-4 2 2 0 000 4z"
        />
      </svg>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ any props 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 gpIcVP className"
  id="id"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ content title 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 gpIcVP"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    <div
      class="Cardstyles__ContentTitle-sc-2l30u5-6 cHBQAy"
    >
      Section header
    </div>
    <div>
      Section 1
    </div>
    <div
      class="Cardstyles__ContentTitle-sc-2l30u5-6 cHBQAy"
    >
      Section header
    </div>
    <div>
      Section2
    </div>
  </div>
</div>
`;

exports[`Card w/ footer 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 gpIcVP"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
  <div
    class="Cardstyles__Footer-sc-2l30u5-4 lpcqgz"
  >
    Card footer
  </div>
</div>
`;

exports[`Card w/ header 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 gpIcVP"
>
  <div
    class="Cardstyles__Header-sc-2l30u5-0 xIVBi"
  >
    <div
      class="Cardstyles__Title-sc-2l30u5-1 cRWity"
    >
      <h5
        class="Headingstyles__Box-sc-1j4seq7-0 eRtSPB"
        color="brand-primary"
      >
        Card title
      </h5>
      <div
        class="Cardstyles__Subtitle-sc-2l30u5-5 cCwuwd"
      >
        Card subtitle
      </div>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ stretch 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 coIVrw"
>
  <div
    class="Cardstyles__Header-sc-2l30u5-0 xIVBi"
  >
    <div
      class="Cardstyles__Title-sc-2l30u5-1 cRWity"
    >
      <h5
        class="Headingstyles__Box-sc-1j4seq7-0 eRtSPB"
        color="brand-primary"
      >
        Simple card
      </h5>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ titile 1`] = `
<div
  class="Cardstyles__Box-sc-2l30u5-7 gpIcVP"
>
  <div
    class="Cardstyles__Header-sc-2l30u5-0 xIVBi"
  >
    <div
      class="Cardstyles__Title-sc-2l30u5-1 cRWity"
    >
      <h5
        class="Headingstyles__Box-sc-1j4seq7-0 eRtSPB"
        color="brand-primary"
      >
        Card title
      </h5>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;
